src/database/manager/parser/verilog/VerilogParse.output
Grammar

    0 $accept: file $end

    1 file: modules

    2 modules: %empty
    3        | modules module

    4 @1: %empty

    5 module_begin: MODULE @1

    6 module: module_begin ID ';' stmts ENDMODULE
    7       | module_begin ID '(' ')' ';' stmts ENDMODULE
    8       | module_begin ID '(' port_list ')' ';' stmts ENDMODULE
    9       | module_begin ID '(' port_dcls ')' ';' stmts ENDMODULE

   10 port_list: port
   11          | port_list ',' port

   12 port: port_expr
   13     | '.' ID '(' ')'
   14     | '.' ID '(' port_expr ')'

   15 port_expr: port_ref
   16          | '{' port_refs '}'

   17 port_refs: port_ref
   18          | port_refs ',' port_ref

   19 port_ref: net_scalar
   20         | net_bit_select
   21         | net_part_select

   22 port_dcls: port_dcl
   23          | port_dcls ',' port_dcl
   24          | port_dcls ',' dcl_arg

   25 @2: %empty

   26 port_dcl: port_dcl_type @2 dcl_arg

   27 @3: %empty

   28 port_dcl: port_dcl_type @3 '[' INT ':' INT ']' dcl_arg

   29 port_dcl_type: INPUT
   30              | INPUT WIRE
   31              | INOUT
   32              | INOUT REG
   33              | INOUT WIRE
   34              | OUTPUT
   35              | OUTPUT WIRE
   36              | OUTPUT REG

   37 stmts: %empty
   38      | stmts stmt
   39      | stmts stmt_seq

   40 stmt: parameter
   41     | defparam
   42     | declaration
   43     | instance
   44     | error ';'

   45 stmt_seq: continuous_assign

   46 parameter: PARAMETER parameter_dcls ';'
   47          | PARAMETER '[' INT ':' INT ']' parameter_dcls ';'

   48 parameter_dcls: parameter_dcl
   49               | parameter_dcls ',' parameter_dcl

   50 parameter_dcl: ID '=' parameter_expr
   51              | ID '=' STRING

   52 parameter_expr: ID
   53               | '`' ID
   54               | CONSTANT
   55               | INT
   56               | '-' parameter_expr
   57               | parameter_expr '+' parameter_expr
   58               | parameter_expr '-' parameter_expr
   59               | parameter_expr '*' parameter_expr
   60               | parameter_expr '/' parameter_expr
   61               | '(' parameter_expr ')'

   62 defparam: DEFPARAM param_values ';'

   63 param_values: param_value
   64             | param_values ',' param_value

   65 param_value: ID '=' parameter_expr
   66            | ID '=' STRING

   67 @4: %empty

   68 declaration: dcl_type @4 dcl_args ';'

   69 @5: %empty

   70 declaration: dcl_type @5 '[' INT ':' INT ']' dcl_args ';'

   71 dcl_type: INPUT
   72         | INOUT
   73         | OUTPUT
   74         | SUPPLY0
   75         | SUPPLY1
   76         | TRI
   77         | WAND
   78         | WIRE
   79         | WOR

   80 dcl_args: dcl_arg
   81         | dcl_args ',' dcl_arg

   82 dcl_arg: ID
   83        | net_assignment

   84 continuous_assign: ASSIGN net_assignments ';'

   85 net_assignments: net_assignment
   86                | net_assignments ',' net_assignment

   87 @6: %empty

   88 net_assignment: net_assign_lhs @6 '=' net_expr

   89 net_assign_lhs: net_named
   90               | net_expr_concat

   91 @7: %empty

   92 instance: ID @7 ID '(' inst_pins ')' ';'

   93 @8: %empty

   94 instance: ID @8 parameter_values ID '(' inst_pins ')' ';'

   95 parameter_values: '#' '(' parameter_exprs ')'

   96 parameter_exprs: parameter_expr
   97                | '{' parameter_exprs '}'
   98                | parameter_exprs ',' parameter_expr

   99 inst_pins: %empty
  100          | inst_ordered_pins
  101          | inst_named_pins

  102 inst_ordered_pins: net_expr
  103                  | inst_ordered_pins ',' net_expr

  104 inst_named_pins: inst_named_pin
  105                | inst_named_pins ',' inst_named_pin

  106 inst_named_pin: '.' ID '(' ')'
  107               | '.' ID '(' ID ')'
  108               | '.' ID '(' ID '[' INT ']' ')'
  109               | '.' ID '(' named_pin_net_expr ')'
  110               | '.' ID '[' INT ']' '(' ')'
  111               | '.' ID '[' INT ']' '(' net_expr ')'
  112               | '.' ID '[' INT ':' INT ']' '(' ')'
  113               | '.' ID '[' INT ':' INT ']' '(' net_expr ')'

  114 named_pin_net_expr: net_part_select
  115                   | net_constant
  116                   | net_expr_concat

  117 net_named: net_scalar
  118          | net_bit_select
  119          | net_part_select

  120 net_scalar: ID

  121 net_bit_select: ID '[' INT ']'

  122 net_part_select: ID '[' INT ':' INT ']'

  123 net_constant: CONSTANT

  124 net_expr_concat: '{' net_exprs '}'

  125 net_exprs: net_expr
  126          | net_exprs ',' net_expr

  127 net_expr: net_scalar
  128         | net_bit_select
  129         | net_part_select
  130         | net_constant
  131         | net_expr_concat


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 95
    '(' (40) 7 8 9 13 14 61 92 94 95 106 107 108 109 110 111 112 113
    ')' (41) 7 8 9 13 14 61 92 94 95 106 107 108 109 110 111 112 113
    '*' (42) 59
    '+' (43) 57
    ',' (44) 11 18 23 24 49 64 81 86 98 103 105 126
    '-' (45) 56 58
    '.' (46) 13 14 106 107 108 109 110 111 112 113
    '/' (47) 60
    ':' (58) 28 47 70 112 113 122
    ';' (59) 6 7 8 9 44 46 47 62 68 70 84 92 94
    '=' (61) 50 51 65 66 88
    '[' (91) 28 47 70 108 110 111 112 113 121 122
    ']' (93) 28 47 70 108 110 111 112 113 121 122
    '`' (96) 53
    '{' (123) 16 97 124
    '}' (125) 16 97 124
    error (256) 44
    INT <integer> (258) 28 47 55 70 108 110 111 112 113 121 122
    CONSTANT <constant> (259) 54 123
    ID <string> (260) 6 7 8 9 13 14 50 51 52 53 65 66 82 92 94 106 107 108 109 110 111 112 113 120 121 122
    STRING <string> (261) 51 66
    MODULE (262) 5
    ENDMODULE (263) 6 7 8 9
    ASSIGN (264) 84
    PARAMETER (265) 46 47
    DEFPARAM (266) 62
    WIRE <integer> (267) 30 33 35 78
    WAND <integer> (268) 77
    WOR <integer> (269) 79
    TRI <integer> (270) 76
    INPUT <integer> (271) 29 30 71
    OUTPUT <integer> (272) 34 35 36 73
    INOUT <integer> (273) 31 32 33 72
    SUPPLY1 <integer> (274) 75
    SUPPLY0 <integer> (275) 74
    REG (276) 32 36
    NEG (277)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    file (41)
        on left: 1
        on right: 0
    modules (42)
        on left: 2 3
        on right: 1 3
    module_begin <integer> (43)
        on left: 5
        on right: 6 7 8 9
    @1 (44)
        on left: 4
        on right: 5
    module (45)
        on left: 6 7 8 9
        on right: 3
    port_list <obj> (46)
        on left: 10 11
        on right: 8 11
    port <obj> (47)
        on left: 12 13 14
        on right: 10 11
    port_expr <obj> (48)
        on left: 15 16
        on right: 12 14
    port_refs <obj> (49)
        on left: 17 18
        on right: 16 18
    port_ref <obj> (50)
        on left: 19 20 21
        on right: 15 17 18
    port_dcls <obj> (51)
        on left: 22 23 24
        on right: 9 23 24
    port_dcl <obj> (52)
        on left: 26 28
        on right: 22 23
    @2 (53)
        on left: 25
        on right: 26
    @3 (54)
        on left: 27
        on right: 28
    port_dcl_type <integer> (55)
        on left: 29 30 31 32 33 34 35 36
        on right: 26 28
    stmts <obj> (56)
        on left: 37 38 39
        on right: 6 7 8 9 38 39
    stmt <obj> (57)
        on left: 40 41 42 43 44
        on right: 38
    stmt_seq <obj> (58)
        on left: 45
        on right: 39
    parameter <obj> (59)
        on left: 46 47
        on right: 40
    parameter_dcls <obj> (60)
        on left: 48 49
        on right: 46 47 49
    parameter_dcl <obj> (61)
        on left: 50 51
        on right: 48 49
    parameter_expr <integer> (62)
        on left: 52 53 54 55 56 57 58 59 60 61
        on right: 50 56 57 58 59 60 61 65 96 98
    defparam <obj> (63)
        on left: 62
        on right: 41
    param_values <obj> (64)
        on left: 63 64
        on right: 62 64
    param_value <obj> (65)
        on left: 65 66
        on right: 63 64
    declaration <obj> (66)
        on left: 68 70
        on right: 42
    @4 (67)
        on left: 67
        on right: 68
    @5 (68)
        on left: 69
        on right: 70
    dcl_type <integer> (69)
        on left: 71 72 73 74 75 76 77 78 79
        on right: 68 70
    dcl_args <obj> (70)
        on left: 80 81
        on right: 68 70 81
    dcl_arg <obj> (71)
        on left: 82 83
        on right: 24 26 28 80 81
    continuous_assign <obj> (72)
        on left: 84
        on right: 45
    net_assignments <obj> (73)
        on left: 85 86
        on right: 84 86
    net_assignment <obj> (74)
        on left: 88
        on right: 83 85 86
    @6 (75)
        on left: 87
        on right: 88
    net_assign_lhs <obj> (76)
        on left: 89 90
        on right: 88
    instance <obj> (77)
        on left: 92 94
        on right: 43
    @7 (78)
        on left: 91
        on right: 92
    @8 (79)
        on left: 93
        on right: 94
    parameter_values (80)
        on left: 95
        on right: 94
    parameter_exprs <integer> (81)
        on left: 96 97 98
        on right: 95 97 98
    inst_pins <obj> (82)
        on left: 99 100 101
        on right: 92 94
    inst_ordered_pins <obj> (83)
        on left: 102 103
        on right: 100 103
    inst_named_pins <obj> (84)
        on left: 104 105
        on right: 101 105
    inst_named_pin <obj> (85)
        on left: 106 107 108 109 110 111 112 113
        on right: 104 105
    named_pin_net_expr <obj> (86)
        on left: 114 115 116
        on right: 109
    net_named <obj> (87)
        on left: 117 118 119
        on right: 89
    net_scalar <obj> (88)
        on left: 120
        on right: 19 117 127
    net_bit_select <obj> (89)
        on left: 121
        on right: 20 118 128
    net_part_select <obj> (90)
        on left: 122
        on right: 21 114 119 129
    net_constant <obj> (91)
        on left: 123
        on right: 115 130
    net_expr_concat <obj> (92)
        on left: 124
        on right: 90 116 131
    net_exprs <obj> (93)
        on left: 125 126
        on right: 124 126
    net_expr <obj> (94)
        on left: 127 128 129 130 131
        on right: 88 102 103 111 113 125 126


State 0

    0 $accept: . file $end

    $default  reduce using rule 2 (modules)

    file     go to state 1
    modules  go to state 2


State 1

    0 $accept: file . $end

    $end  shift, and go to state 3


State 2

    1 file: modules .
    3 modules: modules . module

    MODULE  shift, and go to state 4

    $default  reduce using rule 1 (file)

    module_begin  go to state 5
    module        go to state 6


State 3

    0 $accept: file $end .

    $default  accept


State 4

    5 module_begin: MODULE . @1

    $default  reduce using rule 4 (@1)

    @1  go to state 7


State 5

    6 module: module_begin . ID ';' stmts ENDMODULE
    7       | module_begin . ID '(' ')' ';' stmts ENDMODULE
    8       | module_begin . ID '(' port_list ')' ';' stmts ENDMODULE
    9       | module_begin . ID '(' port_dcls ')' ';' stmts ENDMODULE

    ID  shift, and go to state 8


State 6

    3 modules: modules module .

    $default  reduce using rule 3 (modules)


State 7

    5 module_begin: MODULE @1 .

    $default  reduce using rule 5 (module_begin)


State 8

    6 module: module_begin ID . ';' stmts ENDMODULE
    7       | module_begin ID . '(' ')' ';' stmts ENDMODULE
    8       | module_begin ID . '(' port_list ')' ';' stmts ENDMODULE
    9       | module_begin ID . '(' port_dcls ')' ';' stmts ENDMODULE

    ';'  shift, and go to state 9
    '('  shift, and go to state 10


State 9

    6 module: module_begin ID ';' . stmts ENDMODULE

    $default  reduce using rule 37 (stmts)

    stmts  go to state 11


State 10

    7 module: module_begin ID '(' . ')' ';' stmts ENDMODULE
    8       | module_begin ID '(' . port_list ')' ';' stmts ENDMODULE
    9       | module_begin ID '(' . port_dcls ')' ';' stmts ENDMODULE

    ID      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    INOUT   shift, and go to state 15
    ')'     shift, and go to state 16
    '.'     shift, and go to state 17
    '{'     shift, and go to state 18

    port_list        go to state 19
    port             go to state 20
    port_expr        go to state 21
    port_ref         go to state 22
    port_dcls        go to state 23
    port_dcl         go to state 24
    port_dcl_type    go to state 25
    net_scalar       go to state 26
    net_bit_select   go to state 27
    net_part_select  go to state 28


State 11

    6 module: module_begin ID ';' stmts . ENDMODULE
   38 stmts: stmts . stmt
   39      | stmts . stmt_seq

    error      shift, and go to state 29
    ID         shift, and go to state 30
    ENDMODULE  shift, and go to state 31
    ASSIGN     shift, and go to state 32
    PARAMETER  shift, and go to state 33
    DEFPARAM   shift, and go to state 34
    WIRE       shift, and go to state 35
    WAND       shift, and go to state 36
    WOR        shift, and go to state 37
    TRI        shift, and go to state 38
    INPUT      shift, and go to state 39
    OUTPUT     shift, and go to state 40
    INOUT      shift, and go to state 41
    SUPPLY1    shift, and go to state 42
    SUPPLY0    shift, and go to state 43

    stmt               go to state 44
    stmt_seq           go to state 45
    parameter          go to state 46
    defparam           go to state 47
    declaration        go to state 48
    dcl_type           go to state 49
    continuous_assign  go to state 50
    instance           go to state 51


State 12

  120 net_scalar: ID .
  121 net_bit_select: ID . '[' INT ']'
  122 net_part_select: ID . '[' INT ':' INT ']'

    '['  shift, and go to state 52

    $default  reduce using rule 120 (net_scalar)


State 13

   29 port_dcl_type: INPUT .
   30              | INPUT . WIRE

    WIRE  shift, and go to state 53

    $default  reduce using rule 29 (port_dcl_type)


State 14

   34 port_dcl_type: OUTPUT .
   35              | OUTPUT . WIRE
   36              | OUTPUT . REG

    WIRE  shift, and go to state 54
    REG   shift, and go to state 55

    $default  reduce using rule 34 (port_dcl_type)


State 15

   31 port_dcl_type: INOUT .
   32              | INOUT . REG
   33              | INOUT . WIRE

    WIRE  shift, and go to state 56
    REG   shift, and go to state 57

    $default  reduce using rule 31 (port_dcl_type)


State 16

    7 module: module_begin ID '(' ')' . ';' stmts ENDMODULE

    ';'  shift, and go to state 58


State 17

   13 port: '.' . ID '(' ')'
   14     | '.' . ID '(' port_expr ')'

    ID  shift, and go to state 59


State 18

   16 port_expr: '{' . port_refs '}'

    ID  shift, and go to state 12

    port_refs        go to state 60
    port_ref         go to state 61
    net_scalar       go to state 26
    net_bit_select   go to state 27
    net_part_select  go to state 28


State 19

    8 module: module_begin ID '(' port_list . ')' ';' stmts ENDMODULE
   11 port_list: port_list . ',' port

    ')'  shift, and go to state 62
    ','  shift, and go to state 63


State 20

   10 port_list: port .

    $default  reduce using rule 10 (port_list)


State 21

   12 port: port_expr .

    $default  reduce using rule 12 (port)


State 22

   15 port_expr: port_ref .

    $default  reduce using rule 15 (port_expr)


State 23

    9 module: module_begin ID '(' port_dcls . ')' ';' stmts ENDMODULE
   23 port_dcls: port_dcls . ',' port_dcl
   24          | port_dcls . ',' dcl_arg

    ')'  shift, and go to state 64
    ','  shift, and go to state 65


State 24

   22 port_dcls: port_dcl .

    $default  reduce using rule 22 (port_dcls)


State 25

   26 port_dcl: port_dcl_type . @2 dcl_arg
   28         | port_dcl_type . @3 '[' INT ':' INT ']' dcl_arg

    '['       reduce using rule 27 (@3)
    $default  reduce using rule 25 (@2)

    @2  go to state 66
    @3  go to state 67


State 26

   19 port_ref: net_scalar .

    $default  reduce using rule 19 (port_ref)


State 27

   20 port_ref: net_bit_select .

    $default  reduce using rule 20 (port_ref)


State 28

   21 port_ref: net_part_select .

    $default  reduce using rule 21 (port_ref)


State 29

   44 stmt: error . ';'

    ';'  shift, and go to state 68


State 30

   92 instance: ID . @7 ID '(' inst_pins ')' ';'
   94         | ID . @8 parameter_values ID '(' inst_pins ')' ';'

    '#'       reduce using rule 93 (@8)
    $default  reduce using rule 91 (@7)

    @7  go to state 69
    @8  go to state 70


State 31

    6 module: module_begin ID ';' stmts ENDMODULE .

    $default  reduce using rule 6 (module)


State 32

   84 continuous_assign: ASSIGN . net_assignments ';'

    ID   shift, and go to state 12
    '{'  shift, and go to state 71

    net_assignments  go to state 72
    net_assignment   go to state 73
    net_assign_lhs   go to state 74
    net_named        go to state 75
    net_scalar       go to state 76
    net_bit_select   go to state 77
    net_part_select  go to state 78
    net_expr_concat  go to state 79


State 33

   46 parameter: PARAMETER . parameter_dcls ';'
   47          | PARAMETER . '[' INT ':' INT ']' parameter_dcls ';'

    ID   shift, and go to state 80
    '['  shift, and go to state 81

    parameter_dcls  go to state 82
    parameter_dcl   go to state 83


State 34

   62 defparam: DEFPARAM . param_values ';'

    ID  shift, and go to state 84

    param_values  go to state 85
    param_value   go to state 86


State 35

   78 dcl_type: WIRE .

    $default  reduce using rule 78 (dcl_type)


State 36

   77 dcl_type: WAND .

    $default  reduce using rule 77 (dcl_type)


State 37

   79 dcl_type: WOR .

    $default  reduce using rule 79 (dcl_type)


State 38

   76 dcl_type: TRI .

    $default  reduce using rule 76 (dcl_type)


State 39

   71 dcl_type: INPUT .

    $default  reduce using rule 71 (dcl_type)


State 40

   73 dcl_type: OUTPUT .

    $default  reduce using rule 73 (dcl_type)


State 41

   72 dcl_type: INOUT .

    $default  reduce using rule 72 (dcl_type)


State 42

   75 dcl_type: SUPPLY1 .

    $default  reduce using rule 75 (dcl_type)


State 43

   74 dcl_type: SUPPLY0 .

    $default  reduce using rule 74 (dcl_type)


State 44

   38 stmts: stmts stmt .

    $default  reduce using rule 38 (stmts)


State 45

   39 stmts: stmts stmt_seq .

    $default  reduce using rule 39 (stmts)


State 46

   40 stmt: parameter .

    $default  reduce using rule 40 (stmt)


State 47

   41 stmt: defparam .

    $default  reduce using rule 41 (stmt)


State 48

   42 stmt: declaration .

    $default  reduce using rule 42 (stmt)


State 49

   68 declaration: dcl_type . @4 dcl_args ';'
   70            | dcl_type . @5 '[' INT ':' INT ']' dcl_args ';'

    '['       reduce using rule 69 (@5)
    $default  reduce using rule 67 (@4)

    @4  go to state 87
    @5  go to state 88


State 50

   45 stmt_seq: continuous_assign .

    $default  reduce using rule 45 (stmt_seq)


State 51

   43 stmt: instance .

    $default  reduce using rule 43 (stmt)


State 52

  121 net_bit_select: ID '[' . INT ']'
  122 net_part_select: ID '[' . INT ':' INT ']'

    INT  shift, and go to state 89


State 53

   30 port_dcl_type: INPUT WIRE .

    $default  reduce using rule 30 (port_dcl_type)


State 54

   35 port_dcl_type: OUTPUT WIRE .

    $default  reduce using rule 35 (port_dcl_type)


State 55

   36 port_dcl_type: OUTPUT REG .

    $default  reduce using rule 36 (port_dcl_type)


State 56

   33 port_dcl_type: INOUT WIRE .

    $default  reduce using rule 33 (port_dcl_type)


State 57

   32 port_dcl_type: INOUT REG .

    $default  reduce using rule 32 (port_dcl_type)


State 58

    7 module: module_begin ID '(' ')' ';' . stmts ENDMODULE

    $default  reduce using rule 37 (stmts)

    stmts  go to state 90


State 59

   13 port: '.' ID . '(' ')'
   14     | '.' ID . '(' port_expr ')'

    '('  shift, and go to state 91


State 60

   16 port_expr: '{' port_refs . '}'
   18 port_refs: port_refs . ',' port_ref

    ','  shift, and go to state 92
    '}'  shift, and go to state 93


State 61

   17 port_refs: port_ref .

    $default  reduce using rule 17 (port_refs)


State 62

    8 module: module_begin ID '(' port_list ')' . ';' stmts ENDMODULE

    ';'  shift, and go to state 94


State 63

   11 port_list: port_list ',' . port

    ID   shift, and go to state 12
    '.'  shift, and go to state 17
    '{'  shift, and go to state 18

    port             go to state 95
    port_expr        go to state 21
    port_ref         go to state 22
    net_scalar       go to state 26
    net_bit_select   go to state 27
    net_part_select  go to state 28


State 64

    9 module: module_begin ID '(' port_dcls ')' . ';' stmts ENDMODULE

    ';'  shift, and go to state 96


State 65

   23 port_dcls: port_dcls ',' . port_dcl
   24          | port_dcls ',' . dcl_arg

    ID      shift, and go to state 97
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    INOUT   shift, and go to state 15
    '{'     shift, and go to state 71

    port_dcl         go to state 98
    port_dcl_type    go to state 25
    dcl_arg          go to state 99
    net_assignment   go to state 100
    net_assign_lhs   go to state 74
    net_named        go to state 75
    net_scalar       go to state 76
    net_bit_select   go to state 77
    net_part_select  go to state 78
    net_expr_concat  go to state 79


State 66

   26 port_dcl: port_dcl_type @2 . dcl_arg

    ID   shift, and go to state 97
    '{'  shift, and go to state 71

    dcl_arg          go to state 101
    net_assignment   go to state 100
    net_assign_lhs   go to state 74
    net_named        go to state 75
    net_scalar       go to state 76
    net_bit_select   go to state 77
    net_part_select  go to state 78
    net_expr_concat  go to state 79


State 67

   28 port_dcl: port_dcl_type @3 . '[' INT ':' INT ']' dcl_arg

    '['  shift, and go to state 102


State 68

   44 stmt: error ';' .

    $default  reduce using rule 44 (stmt)


State 69

   92 instance: ID @7 . ID '(' inst_pins ')' ';'

    ID  shift, and go to state 103


State 70

   94 instance: ID @8 . parameter_values ID '(' inst_pins ')' ';'

    '#'  shift, and go to state 104

    parameter_values  go to state 105


State 71

  124 net_expr_concat: '{' . net_exprs '}'

    CONSTANT  shift, and go to state 106
    ID        shift, and go to state 12
    '{'       shift, and go to state 71

    net_scalar       go to state 107
    net_bit_select   go to state 108
    net_part_select  go to state 109
    net_constant     go to state 110
    net_expr_concat  go to state 111
    net_exprs        go to state 112
    net_expr         go to state 113


State 72

   84 continuous_assign: ASSIGN net_assignments . ';'
   86 net_assignments: net_assignments . ',' net_assignment

    ';'  shift, and go to state 114
    ','  shift, and go to state 115


State 73

   85 net_assignments: net_assignment .

    $default  reduce using rule 85 (net_assignments)


State 74

   88 net_assignment: net_assign_lhs . @6 '=' net_expr

    $default  reduce using rule 87 (@6)

    @6  go to state 116


State 75

   89 net_assign_lhs: net_named .

    $default  reduce using rule 89 (net_assign_lhs)


State 76

  117 net_named: net_scalar .

    $default  reduce using rule 117 (net_named)


State 77

  118 net_named: net_bit_select .

    $default  reduce using rule 118 (net_named)


State 78

  119 net_named: net_part_select .

    $default  reduce using rule 119 (net_named)


State 79

   90 net_assign_lhs: net_expr_concat .

    $default  reduce using rule 90 (net_assign_lhs)


State 80

   50 parameter_dcl: ID . '=' parameter_expr
   51              | ID . '=' STRING

    '='  shift, and go to state 117


State 81

   47 parameter: PARAMETER '[' . INT ':' INT ']' parameter_dcls ';'

    INT  shift, and go to state 118


State 82

   46 parameter: PARAMETER parameter_dcls . ';'
   49 parameter_dcls: parameter_dcls . ',' parameter_dcl

    ';'  shift, and go to state 119
    ','  shift, and go to state 120


State 83

   48 parameter_dcls: parameter_dcl .

    $default  reduce using rule 48 (parameter_dcls)


State 84

   65 param_value: ID . '=' parameter_expr
   66            | ID . '=' STRING

    '='  shift, and go to state 121


State 85

   62 defparam: DEFPARAM param_values . ';'
   64 param_values: param_values . ',' param_value

    ';'  shift, and go to state 122
    ','  shift, and go to state 123


State 86

   63 param_values: param_value .

    $default  reduce using rule 63 (param_values)


State 87

   68 declaration: dcl_type @4 . dcl_args ';'

    ID   shift, and go to state 97
    '{'  shift, and go to state 71

    dcl_args         go to state 124
    dcl_arg          go to state 125
    net_assignment   go to state 100
    net_assign_lhs   go to state 74
    net_named        go to state 75
    net_scalar       go to state 76
    net_bit_select   go to state 77
    net_part_select  go to state 78
    net_expr_concat  go to state 79


State 88

   70 declaration: dcl_type @5 . '[' INT ':' INT ']' dcl_args ';'

    '['  shift, and go to state 126


State 89

  121 net_bit_select: ID '[' INT . ']'
  122 net_part_select: ID '[' INT . ':' INT ']'

    ':'  shift, and go to state 127
    ']'  shift, and go to state 128


State 90

    7 module: module_begin ID '(' ')' ';' stmts . ENDMODULE
   38 stmts: stmts . stmt
   39      | stmts . stmt_seq

    error      shift, and go to state 29
    ID         shift, and go to state 30
    ENDMODULE  shift, and go to state 129
    ASSIGN     shift, and go to state 32
    PARAMETER  shift, and go to state 33
    DEFPARAM   shift, and go to state 34
    WIRE       shift, and go to state 35
    WAND       shift, and go to state 36
    WOR        shift, and go to state 37
    TRI        shift, and go to state 38
    INPUT      shift, and go to state 39
    OUTPUT     shift, and go to state 40
    INOUT      shift, and go to state 41
    SUPPLY1    shift, and go to state 42
    SUPPLY0    shift, and go to state 43

    stmt               go to state 44
    stmt_seq           go to state 45
    parameter          go to state 46
    defparam           go to state 47
    declaration        go to state 48
    dcl_type           go to state 49
    continuous_assign  go to state 50
    instance           go to state 51


State 91

   13 port: '.' ID '(' . ')'
   14     | '.' ID '(' . port_expr ')'

    ID   shift, and go to state 12
    ')'  shift, and go to state 130
    '{'  shift, and go to state 18

    port_expr        go to state 131
    port_ref         go to state 22
    net_scalar       go to state 26
    net_bit_select   go to state 27
    net_part_select  go to state 28


State 92

   18 port_refs: port_refs ',' . port_ref

    ID  shift, and go to state 12

    port_ref         go to state 132
    net_scalar       go to state 26
    net_bit_select   go to state 27
    net_part_select  go to state 28


State 93

   16 port_expr: '{' port_refs '}' .

    $default  reduce using rule 16 (port_expr)


State 94

    8 module: module_begin ID '(' port_list ')' ';' . stmts ENDMODULE

    $default  reduce using rule 37 (stmts)

    stmts  go to state 133


State 95

   11 port_list: port_list ',' port .

    $default  reduce using rule 11 (port_list)


State 96

    9 module: module_begin ID '(' port_dcls ')' ';' . stmts ENDMODULE

    $default  reduce using rule 37 (stmts)

    stmts  go to state 134


State 97

   82 dcl_arg: ID .
  120 net_scalar: ID .
  121 net_bit_select: ID . '[' INT ']'
  122 net_part_select: ID . '[' INT ':' INT ']'

    '['  shift, and go to state 52

    '='       reduce using rule 120 (net_scalar)
    $default  reduce using rule 82 (dcl_arg)


State 98

   23 port_dcls: port_dcls ',' port_dcl .

    $default  reduce using rule 23 (port_dcls)


State 99

   24 port_dcls: port_dcls ',' dcl_arg .

    $default  reduce using rule 24 (port_dcls)


State 100

   83 dcl_arg: net_assignment .

    $default  reduce using rule 83 (dcl_arg)


State 101

   26 port_dcl: port_dcl_type @2 dcl_arg .

    $default  reduce using rule 26 (port_dcl)


State 102

   28 port_dcl: port_dcl_type @3 '[' . INT ':' INT ']' dcl_arg

    INT  shift, and go to state 135


State 103

   92 instance: ID @7 ID . '(' inst_pins ')' ';'

    '('  shift, and go to state 136


State 104

   95 parameter_values: '#' . '(' parameter_exprs ')'

    '('  shift, and go to state 137


State 105

   94 instance: ID @8 parameter_values . ID '(' inst_pins ')' ';'

    ID  shift, and go to state 138


State 106

  123 net_constant: CONSTANT .

    $default  reduce using rule 123 (net_constant)


State 107

  127 net_expr: net_scalar .

    $default  reduce using rule 127 (net_expr)


State 108

  128 net_expr: net_bit_select .

    $default  reduce using rule 128 (net_expr)


State 109

  129 net_expr: net_part_select .

    $default  reduce using rule 129 (net_expr)


State 110

  130 net_expr: net_constant .

    $default  reduce using rule 130 (net_expr)


State 111

  131 net_expr: net_expr_concat .

    $default  reduce using rule 131 (net_expr)


State 112

  124 net_expr_concat: '{' net_exprs . '}'
  126 net_exprs: net_exprs . ',' net_expr

    ','  shift, and go to state 139
    '}'  shift, and go to state 140


State 113

  125 net_exprs: net_expr .

    $default  reduce using rule 125 (net_exprs)


State 114

   84 continuous_assign: ASSIGN net_assignments ';' .

    $default  reduce using rule 84 (continuous_assign)


State 115

   86 net_assignments: net_assignments ',' . net_assignment

    ID   shift, and go to state 12
    '{'  shift, and go to state 71

    net_assignment   go to state 141
    net_assign_lhs   go to state 74
    net_named        go to state 75
    net_scalar       go to state 76
    net_bit_select   go to state 77
    net_part_select  go to state 78
    net_expr_concat  go to state 79


State 116

   88 net_assignment: net_assign_lhs @6 . '=' net_expr

    '='  shift, and go to state 142


State 117

   50 parameter_dcl: ID '=' . parameter_expr
   51              | ID '=' . STRING

    INT       shift, and go to state 143
    CONSTANT  shift, and go to state 144
    ID        shift, and go to state 145
    STRING    shift, and go to state 146
    '-'       shift, and go to state 147
    '('       shift, and go to state 148
    '`'       shift, and go to state 149

    parameter_expr  go to state 150


State 118

   47 parameter: PARAMETER '[' INT . ':' INT ']' parameter_dcls ';'

    ':'  shift, and go to state 151


State 119

   46 parameter: PARAMETER parameter_dcls ';' .

    $default  reduce using rule 46 (parameter)


State 120

   49 parameter_dcls: parameter_dcls ',' . parameter_dcl

    ID  shift, and go to state 80

    parameter_dcl  go to state 152


State 121

   65 param_value: ID '=' . parameter_expr
   66            | ID '=' . STRING

    INT       shift, and go to state 143
    CONSTANT  shift, and go to state 144
    ID        shift, and go to state 145
    STRING    shift, and go to state 153
    '-'       shift, and go to state 147
    '('       shift, and go to state 148
    '`'       shift, and go to state 149

    parameter_expr  go to state 154


State 122

   62 defparam: DEFPARAM param_values ';' .

    $default  reduce using rule 62 (defparam)


State 123

   64 param_values: param_values ',' . param_value

    ID  shift, and go to state 84

    param_value  go to state 155


State 124

   68 declaration: dcl_type @4 dcl_args . ';'
   81 dcl_args: dcl_args . ',' dcl_arg

    ';'  shift, and go to state 156
    ','  shift, and go to state 157


State 125

   80 dcl_args: dcl_arg .

    $default  reduce using rule 80 (dcl_args)


State 126

   70 declaration: dcl_type @5 '[' . INT ':' INT ']' dcl_args ';'

    INT  shift, and go to state 158


State 127

  122 net_part_select: ID '[' INT ':' . INT ']'

    INT  shift, and go to state 159


State 128

  121 net_bit_select: ID '[' INT ']' .

    $default  reduce using rule 121 (net_bit_select)


State 129

    7 module: module_begin ID '(' ')' ';' stmts ENDMODULE .

    $default  reduce using rule 7 (module)


State 130

   13 port: '.' ID '(' ')' .

    $default  reduce using rule 13 (port)


State 131

   14 port: '.' ID '(' port_expr . ')'

    ')'  shift, and go to state 160


State 132

   18 port_refs: port_refs ',' port_ref .

    $default  reduce using rule 18 (port_refs)


State 133

    8 module: module_begin ID '(' port_list ')' ';' stmts . ENDMODULE
   38 stmts: stmts . stmt
   39      | stmts . stmt_seq

    error      shift, and go to state 29
    ID         shift, and go to state 30
    ENDMODULE  shift, and go to state 161
    ASSIGN     shift, and go to state 32
    PARAMETER  shift, and go to state 33
    DEFPARAM   shift, and go to state 34
    WIRE       shift, and go to state 35
    WAND       shift, and go to state 36
    WOR        shift, and go to state 37
    TRI        shift, and go to state 38
    INPUT      shift, and go to state 39
    OUTPUT     shift, and go to state 40
    INOUT      shift, and go to state 41
    SUPPLY1    shift, and go to state 42
    SUPPLY0    shift, and go to state 43

    stmt               go to state 44
    stmt_seq           go to state 45
    parameter          go to state 46
    defparam           go to state 47
    declaration        go to state 48
    dcl_type           go to state 49
    continuous_assign  go to state 50
    instance           go to state 51


State 134

    9 module: module_begin ID '(' port_dcls ')' ';' stmts . ENDMODULE
   38 stmts: stmts . stmt
   39      | stmts . stmt_seq
